deploy/etc/deployments/zeta-operator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeta-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zeta-operator
  template:
    metadata:
      labels:
        app: zeta-operator
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      serviceAccountName: zeta-operator
      terminationGracePeriodSeconds: 0
      hostNetwork: true
      containers:
        - image: ${REGISTRY}/zeta_opr:latest
          name: zeta-operator
          securityContext:
            privileged: true
